added get all users endpoint for admin
